--- a/mentalhealth-main/src/Components/userreg/register.css
+++ b/mentalhealth-main/src/Components/userreg/register.css
@@ -1,127 +1,9 @@
-.register-container {
-  background-image: url("../images/login-bg.jpg");
-  background-blend-mode: screen;
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-  width: 100%;
-  backdrop-filter: blur(80px);
-  margin-top: -10px;
-  -webkit-backdrop-filter: blur(8px);
-}
-
-.register-intro {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  z-index: 1;
-}
-
-.register-intro-box {
-  background-color: purple;
-  width: 22%;
-  height: 15%;
-  margin-top: 5px;
-  margin-bottom: 10px;
-  padding-bottom: 1px;
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-}
-
-.register-intro h3 {
-  font-size: 30px;
-  z-index: 1;
-  color: rgb(0, 0, 0);
-}
-
-.register-intro p {
-  margin-top: 0px;
-  font-size: 15px;
-  margin-bottom: 30px;
-  color: rgb(0, 0, 0);
-  z-index: 1;
-}
-
-.register-form-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 60vh;
-  z-index: 1;
-}
-
-.register-form {
-  width: 300px;
-  padding: 20px;
-  background-color: aliceblue;
-  border: 2px solid #000000;
-  border-radius: 8px;
-  display: flex;
-  flex-direction: column;
-  z-index: 1;
-}
-
-#register-button {
-  background-color: rgb(111, 0, 128);
-  color: white;
-  height: 40px;
-  font-weight: bold;
-  border: 3px solid #000;
-  z-index: 1;
-}
-
-#register-button:hover {
-  color: black;
-  background-color: rgb(163, 7, 187);
-  z-index: 1;
-}
-
-.register-form input {
-  height: 25px;
-  border: 1px solid #000;
-  border-radius: 5px;
-  z-index: 1;
-  background-color: rgb(230, 229, 229);
-  margin-bottom: 10px;
-}
-
-.register-name-inputs {
-  display: inline-flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
-  z-index: 1;
-}
-
-.register-name-inputs input {
-  width: 48%;
-  z-index: 1;
-}
-
-.register-form input:not([type="button"]),
-.register-form p {
-  margin-bottom: 10px;
-  z-index: 1;
-}
-
-.register-button-container {
-  margin-top: auto;
-  z-index: 1;
-}
-
-.register-logo-end {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-top: 30px;
-  color: rgb(0, 0, 0);
-  z-index: 1;
-}
-
-.flex-column > * {
-  margin-top: 1px;
-}
+img {
+    width: 150px;
+    height: 90px;
+    margin-top: 20px;
+    margin-right: 1300px;
+    display: flex;
+    float: left;
+    position: absolute;
+  }
