--- a/mentalhealth-main/src/Components/User/userlayout.css
+++ b/mentalhealth-main/src/Components/User/userlayout.css
@@ -6,13 +6,13 @@
     flex-direction: row;
     width: 100%;
     height: 50px;
-    justify-content: space-between;
+    justify-content: space-evenly;
     background-color: grey;
 }
 .logo-nav{
     margin-top: 10px;
     position: relative;
-    font-family:fa;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .search-bar{
     margin-top: 10px;
