--- a/mentalhealth-main/src/Components/User/userlayout.css
+++ b/mentalhealth-main/src/Components/User/userlayout.css
@@ -1,19 +1,36 @@
 *{
-    margin: 0;
+    overflow: hidden;
 }
-.main-nav{
+.userhome-nav{
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(0, 0, 0);
     width: 100%;
-    height: 50px;
+    position: absolute;
+    margin-left: -150px;
+    margin-top: -30px;
+    height:65px;
+    margin-bottom: 300px;
+    padding:10px;
+}
+.userhome-nav input{
+    width: 30%;
+    height: 30px;
+    border-radius: 10px;
+    padding-left: 10px;
+    color:#8C8E90;
+    border-style: none;
+    background-color: #202327;
+}
+.right-nav{
+    display: flex;
     justify-content: space-evenly;
-    background-color: grey;
-}
-.logo-nav{
+    position: absolute;
     margin-top: 10px;
-    position: relative;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-left: 1280px;
 }
-.search-bar{
-    margin-top: 10px;
+
+.outlet{
+    margin-top: 40px;
 }
