--- a/mentalhealth-main/src/Components/User/userlayout.css
+++ b/mentalhealth-main/src/Components/User/userlayout.css
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     width: 100%;
     position: absolute;
     margin-left: -150px;
@@ -19,9 +19,9 @@
     height: 30px;
     border-radius: 10px;
     padding-left: 10px;
-    color:#8C8E90;
+    color:#565656;
     border-style: none;
-    background-color: #202327;
+    background-color: #d6d6d6;
 }
 .right-nav{
     display: flex;
@@ -34,3 +34,4 @@
 .outlet{
     margin-top: 40px;
 }
+
