--- a/mentalhealth-main/src/Components/User/userjournal.css
+++ b/mentalhealth-main/src/Components/User/userjournal.css
@@ -36,6 +36,11 @@
     height: 40px;
     width: 70px;
 }
+.journal-submt{
+    display: flex;
+    flex-direction: row;
+    gap:10px;
+}
 .journal-submit button:hover{
     cursor:pointer;
     background:rgb(209, 176, 224);
