--- a/mentalhealth-main/src/Components/User/UserMeditation.css
+++ b/mentalhealth-main/src/Components/User/UserMeditation.css
@@ -2,4 +2,50 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: row;
+}
+.meditation-header{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+#meditation-highlight{
+    color:#B271C3;
+}
+.meditation-message{
+    margin-bottom:30px;
+}
+.meditation-message a{
+    text-decoration: none;
+}
+.meditation-button button{
+    background:#B271C3;
+    color:white;
+    padding:3px;
+    font-weight:600;
+    border: 2px solid black;
+    border-radius: 10px;
+    height: 60px;
+    width: 120px;
+}
+.meditation-button button:hover{
+    cursor:pointer;
+    background: white;
+    color:#B271C3;
+}
+.modal-header{
+    position: relative;
+    margin-left: -167px;
+}
+.meditation-modal{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.modal-header-img{
+    position: relative;
+    height: 300px;
+    width: 100%;
 }
